# kugo-Storage-Isolation

./: settings.gradle
.github/workflows/: gradle-publish.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  native_hook.cpp
app/src/main/java/kugo/sd/iso/: JavaHook.java  MainHook.java  NativeHook.java
app/src/main/res/values/: arrays.xml  strings.xml
